# claude-transcribe

./: .gitignore  Makefile  QUICKSTART_CLAUDE.md  README.md  README_CLAUDE.md  UV_SETUP.md  batch_pdf_processor_claude.py  check_batch_cost.py  config.example.yaml  pyproject.toml  setup.sh  template.md  test_setup_claude.py  test_single_claude.py
